--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -12,6 +12,10 @@ blocked_commands_during_fight:
   - /pvpworld:lobby
   - /kit
   - /pvpworld:kit
+  - /duel
+  - /pvpworld:duel
+  - /forceduel
+  - /pvpworld:forceduel
 
 allowed_commands_in_pvp_world:
   - /lobby
