before command api

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -23,6 +23,8 @@ commands:
   pvpworld:
     permission: pvpworld.admin
     usage: /pvpworld <subcommand>
+  nodisconnect:
+    permission: op
 
 permissions:
   pvpworld.admin:
